flatpak-builder: Autospec creation for update from version 1.2.0 to version 1.2.2
Alexander Larsson (2):
      Allow --nofilesystem=host:reset in flatpak-builder --run
      Temporarily disable fatal-warnings in tests

Hofer-Julian (1):
      Add flatpak-manifest.schema.json (#432)

Jan Tojnar (1):
      doc: Unify on single DocBook version

Patrick Griffis (2):
      build: Add json schema to EXTRA_DIST
      Bump version to 1.2.1

Phaedrus Leeds (3):
      src: Fix some whitespace
      Mention 'metainfo' in appdata related docs
      Fix grammar in inherit-extensions docs

Ryan Gonzalez (1):
      Avoid re-processing debug info from previous modules

Simon McVittie (3):
      context: Make FUSE 2 optimizations opt-in
      Disable filesystem access with --nofilesystem=host:reset
      Prepare v1.2.2

TheEvilSkeleton (2):
      Switch to GitHub forms
      Fix casing

catsout (1):
      source-archive: Fix get_type on 7zip archive

gasinvein (14):
      Make source validation errors fatal
      source-archive: Add .tar.zst support
      json-schema: Fix extension.enable-if type and desc
      json-schema: Add default-branch property...
      json-schema: Rename `definitions` to `$defs`
      json-schema: Add `disable-submodules` prop for git
      json-schema: Allow top-level ignored properties
      json-schema: Proper `download-if` and `enable-if`
      json-schema: Add `autoprune-unless` condition prop
      json-schema: Rename source type defs properties
      json-schema: Add archive-type property
      json-schema: Define ignored properties
      json-schema: Forbid unknown properties on sources
      json-schema: Define `env` object contents

flatpak-builder >= 1.2.2 uses a new option `--nofilesystem=host:reset`
to cancel out filesystem permissions in the application manifest and
overrides. This is only effective when using Flatpak >= 1.12.4, or a
version that has a backport of the `--nofilesystem=host:reset` feature
(such as 1.10.x versions >= 1.10.7).

Wh

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = flatpak-builder
-url = https://github.com/flatpak/flatpak-builder/releases/download/1.2.0/flatpak-builder-1.2.0.tar.xz
+url = https://github.com/flatpak/flatpak-builder/releases/download/1.2.2/flatpak-builder-1.2.2.tar.xz
 archives = 
 giturl = https://github.com/flatpak/flatpak-builder.git
 domain = 
@@ -46,7 +46,7 @@ optimize_size = false
 # set profile for pgo
 pgo = false
 # set flags for security-sensitive builds
-security_sensitive = false
+security_sensitive = true
 # package is only used by servers
 server = false
 # do not run test suite
